--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Coming Soon 4</title>
+	<title>RavinduRave</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
@@ -63,7 +63,7 @@
 		</div>
 
 		<span class="s1-txt3 txt-center">
-			@ 2017 Coming Soon Template. Designed by Colorlib
+			@ 2023 Ravindu Balasooriya - All rights reserved
 		</span>
 		
 	</div>
@@ -136,8 +136,7 @@
 			endtimeHours: 18,
 			endtimeMinutes: 0,
 			endtimeSeconds: 0,
-			timeZone: "" 
-			// ex:  timeZone: "America/New_York", can be empty
+			timeZone: "Asia/Colombo" 
 			// go to " http://momentjs.com/timezone/ " to get timezone
 		});
 	</script>
