--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 			endtimeHours: 18,
 			endtimeMinutes: 0,
 			endtimeSeconds: 0,
-			timeZone: "Asia/Colombo" 
+			timeZone: "" 
 			// go to " http://momentjs.com/timezone/ " to get timezone
 		});
 	</script>
