--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>RavinduRave</title>
 	<meta charset="UTF-8">
+	<script src="https://kit.fontawesome.com/7664bb8300.js" crossorigin="anonymous"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
 	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
@@ -61,6 +62,15 @@
 				Follow us for update now!
 			</button>
 		</div>
+
+
+		<span class="s1-txt6 txt-center">
+			<a href="https://www.facebook.com/ravindurave"><i class="fa-brands fa-facebook fa-fade" style="color: #ffffff;"></i></a>
+			<a href="https://www.twitter.com/ravindurave"><i class="fa-brands fa-twitter fa-fade" style="color: #ffffff;"></i></a>
+			<a href="https://www.github.com/ravefx"><i class="fa-brands fa-github fa-fade" style="color: #ffffff;"></i></a>
+			<a href="https://www.behance.net/ravindurave"><i class="fa-brands fa-behance fa-fade" style="color: #ffffff;"></i></a>
+			<a href="https://www.medium.com/devogeek"><i class="fa-brands fa-medium fa-fade" style="color: #ffffff;"></i></a>
+		</span>
 
 		<span class="s1-txt3 txt-center">
 			@ 2023 Ravindu Balasooriya - All rights reserved
