--- a/index.html
+++ b/index.html
@@ -1,30 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-5N2W31XP4K"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-5N2W31XP4K');
+	</script>
 	<title>RavinduRave</title>
 	<meta charset="UTF-8">
 	<script src="https://kit.fontawesome.com/7664bb8300.js" crossorigin="anonymous"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-<!--===============================================================================================-->	
-	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
+	<link rel="icon" type="image/png" href="images/icons/favicon.ico" />
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="fonts/iconic/css/material-design-iconic-font.min.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="css/util.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 </head>
+
 <body>
-	
-	
+
+
 	<div class="bg-g1 size1 flex-w flex-col-c-sb p-l-15 p-r-15 p-t-55 p-b-35 respon1">
 		<span></span>
 		<div class="flex-col-c p-t-50 p-b-50">
@@ -58,25 +69,30 @@
 				</div>
 			</div>
 
-			<button class="flex-c-m s1-txt2 size3 how-btn"  data-toggle="modal" data-target="#subscribe">
+			<button class="flex-c-m s1-txt2 size3 how-btn" data-toggle="modal" data-target="#subscribe">
 				Follow us for update now!
 			</button>
 		</div>
 
-		
+
 
 		<span class="s1-txt6 txt-center">
-			<a href="https://www.facebook.com/ravindurave"><i class="fa-brands fa-facebook fa-fade" style="color: #ffffff;"></i></a>
-			<a href="https://www.twitter.com/ravindurave"><i class="fa-brands fa-twitter fa-fade" style="color: #ffffff;"></i></a>
-			<a href="https://www.github.com/ravefx"><i class="fa-brands fa-github fa-fade" style="color: #ffffff;"></i></a>
-			<a href="https://www.behance.net/ravindurave"><i class="fa-brands fa-behance fa-fade" style="color: #ffffff;"></i></a>
-			<a href="https://www.medium.com/devogeek"><i class="fa-brands fa-medium fa-fade" style="color: #ffffff;"></i></a>
+			<a href="https://www.facebook.com/ravindurave"><i class="fa-brands fa-facebook fa-fade"
+					style="color: #ffffff;"></i></a>
+			<a href="https://www.twitter.com/ravindurave"><i class="fa-brands fa-twitter fa-fade"
+					style="color: #ffffff;"></i></a>
+			<a href="https://www.github.com/ravefx"><i class="fa-brands fa-github fa-fade"
+					style="color: #ffffff;"></i></a>
+			<a href="https://www.behance.net/ravindurave"><i class="fa-brands fa-behance fa-fade"
+					style="color: #ffffff;"></i></a>
+			<a href="https://www.medium.com/devogeek"><i class="fa-brands fa-medium fa-fade"
+					style="color: #ffffff;"></i></a>
 		</span>
 
 		<span class="s1-txt3 txt-center">
 			@ 2023 Ravindu Balasooriya - All rights reserved
 		</span>
-		
+
 	</div>
 
 	<!-- Modal Login -->
@@ -97,12 +113,12 @@
 					</p>
 
 					<form class="contact100-form validate-form">
-						<div class="wrap-input100 m-b-10 validate-input" data-validate = "Name is required">
+						<div class="wrap-input100 m-b-10 validate-input" data-validate="Name is required">
 							<input class="s1-txt4 placeholder0 input100" type="text" name="name" placeholder="Name">
 							<span class="focus-input100"></span>
 						</div>
 
-						<div class="wrap-input100 m-b-20 validate-input" data-validate = "Email is required: ex@abc.xyz">
+						<div class="wrap-input100 m-b-20 validate-input" data-validate="Email is required: ex@abc.xyz">
 							<input class="s1-txt4 placeholder0 input100" type="text" name="email" placeholder="Email">
 							<span class="focus-input100"></span>
 						</div>
@@ -123,16 +139,16 @@
 		</div>
 	</div>
 
-	
 
-<!--===============================================================================================-->	
+
+	<!--===============================================================================================-->
 	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<script src="vendor/bootstrap/js/popper.js"></script>
 	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<script src="vendor/select2/select2.min.js"></script>
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<script src="vendor/countdowntime/moment.min.js"></script>
 	<script src="vendor/countdowntime/moment-timezone.min.js"></script>
 	<script src="vendor/countdowntime/moment-timezone-with-data.min.js"></script>
@@ -147,18 +163,19 @@
 			endtimeHours: 18,
 			endtimeMinutes: 0,
 			endtimeSeconds: 0,
-			timeZone: "" 
+			timeZone: ""
 			// go to " http://momentjs.com/timezone/ " to get timezone
 		});
 	</script>
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<script src="vendor/tilt/tilt.jquery.min.js"></script>
-	<script >
+	<script>
 		$('.js-tilt').tilt({
 			scale: 1.1
 		})
 	</script>
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<script src="js/main.js"></script>
 </body>
+
 </html>
