--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 		gtag('config', 'G-5N2W31XP4K');
 	</script>
+	<script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 	<title>RavinduRave</title>
 	<meta charset="UTF-8">
 	<script src="https://kit.fontawesome.com/7664bb8300.js" crossorigin="anonymous"></script>
@@ -74,7 +75,8 @@
 			</button>
 		</div>
 
-
+		<div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="ravindu-balasooriya" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://lk.linkedin.com/in/ravindu-balasooriya?trk=profile-badge">Ravindu Balasooriya</a></div>
+              
 
 		<span class="s1-txt6 txt-center">
 			<a href="https://www.facebook.com/ravindurave"><i class="fa-brands fa-facebook fa-fade"
